--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pystock0"
-version = "0.1.0"
+version = "0.2.0"
 description = "A library for portfolio optimization"
 readme = "README.md"
 authors = [{ name = "Harikesh Kushwaha", email = "harikeshkumar0926@gmail.com" }]
@@ -33,4 +33,4 @@ download = ["black", "yfinance"]
 [project.urls]
 Homepage = "https://github.com/Hari31416/pystock"
 repository = "https://github.com/Hari31416/pystock"
-documentation = "https://hari31416.github.io/pystock/
+documentation = "https://hari31416.github.io/pystock/"
