--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pystock0"
-version = "0.2.3"
+version = "0.3.0"
 description = "A library for portfolio optimization"
 readme = "README.md"
 authors = [{ name = "Harikesh Kushwaha", email = "harikeshkumar0926@gmail.com" }]
@@ -23,6 +23,7 @@ dependencies = [
     "scipy",
     "statsmodels",
     "tabulate",
+    "tqdm",
 ]
 requires-python = ">=3.7"
 
